Mon Jul  7 15:02:13 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (rb_longjmp): duplicate the thrown exception to set backtrace
	  if it was frozen.  clear all raised flags.

	* eval.c (stack_check): leave clearing flag to rb_longjmp.

	* eval.c (rb_thread_set_raised, rb_thread_reset_raised): use generic
	  flags.

	* eval.c (Init_Proc), gc.c (Init_GC): freeze preallocated special exceptions.

	* gc.c (rb_memerror): use thread raised flag instead of static flag,
	  and raise nomem_error without backtrace if failed to make backtrace.
	  [ruby-dev:34724]

	* gc.c (ruby_xmalloc): increase malloc_increase only if malloc
	  succeeds.  failed malloc size can be huge.  it may increase
	  malloc_limit too big which cause less GC and memory full.
	  (ruby_xrealloc): ditto.

Mon Jul  7 12:23:05 2008  Masaki Suketa  <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c: avoid creating Ruby object during
	  GC. thanks to arton <artonx AT yahoo.co.jp>. [ruby-dev:35313]

	* ext/win32ole/tests: add test_win32ole_event.rb, remove
	  testOLEEVENT.rb

	* ext/win32ole/tests/testWIN32OLE.rb(test_convert_bignum):
	  fix test.

Mon Jul  7 12:23:05 2008  Masaki Suketa  <masaki.suketa@nifty.ne.jp>

	* gc.c: add rb_during_gc(). based on a patch from arton <artonx AT
	  yahoo.co.jp> at [ruby-dev:35313].   

	* intern.h: ditto.

Thu Jul  3 20:13:20 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* marshal.c (w_object, marshal_dump, r_object0, marshal_load): search
	  public methods only.  [ruby-core:17283]

	* object.c (convert_type): ditto.

	* lib/singleton.rb (Singleton#_dump): conversion method should be
	  public.

Wed Jul  2 19:06:43 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/cgi.rb (CGI::QueryExtension.read_multipart): blanks inside
	  double quotes are allowed.  [ruby-list:45140]

Wed Jul  2 19:03:37 2008  Tanaka Akira  <akr@fsij.org>

	* numeric.c (num_coerce): call rb_Float(x) first.  don't depend on
	  evaluation order of function arguments.
