@@ -2,7 +2,7 @@
 #define RUBY_RELEASE_DATE "2008-07-07"
 #define RUBY_VERSION_CODE 187
 #define RUBY_RELEASE_CODE 20080707
-#define RUBY_PATCHLEVEL 49
+#define RUBY_PATCHLEVEL 50
 
 #define RUBY_VERSION_MAJOR 1
 #define RUBY_VERSION_MINOR 8
